# OscilloWatch

./: .gitignore  AnalysisSettings.py  ClassTest.py  ClassTest2.py  DampingAnalysis.py  EMD.py  EMD_CGPT.py  EMD_GitHub.py  HHT.py  N44_base_script.py  README.md  csv_multiple_pmus.py  damping_analysis.py  emd.py  hht.py  hilbert_spectrum_stft.py  k2a_base_script.py  pickle_test.py  pyproject.toml  requirements.txt  results.md  segment_analysis.py  settings.md  spectrum_plot_cheat.py  test.py
OscilloWatch/: AnalysisSettings.py  EMD.py  HHT.py  OWSettings.py  RealTimeAnalysis.py  SegmentAnalysis.py  SignalSnapshotAnalysis.py  csv_column_to_list.py  get_mode_amplitude_evolution.py  plot_mode_amplitude.py  post_processing.py
dynpssimpy/: modal_analysis.py
examples/: N44_base_script.py  access_old_results.py  data_from_csv.py  data_from_csv_V.py  data_from_csv_angle.py  k2a_base_script.py  multi_pmu_n45_angle.py  plot_mode_amplitude.py  read_from_pkl.py  real_time_analysis.py  signal_snapshot_analysis.py  spectrum_plot_cheat.py  synthetic_signal.py  test_emd.py  test_real_time_analysis.py  test_segment_analysis.py  tops_simulation.py
methods/: AnalysisSettings.py  EMD.py  HHT.py  RealTimeAnalysis.py  SegmentAnalysis.py  SignalAnalysis.py  SignalSnapshotAnalysis.py  plot_mode_amplitude.py  read_from_pkl.py
pmu_scripts/: randomPMU.py  send_array.py  send_array_simplePMU.py  send_function.py  send_function_as_PMU.py  simplePMU.py
pyPMU_examples/: pyPMU.py  simplePMU.py  tinyPDC.py  tinyPMU.py
tests_osc/: N44_base_script.py  data_from_csv.py  k2a_base_script.py  test.py  (+6 more)
(+27 files in other folders)
