[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "OscilloWatch"
version = "0.1.0"
authors = [
  { name="Maurits Sørensen Molberg", email="maurits.molberg@hotmail.com" },
]
description = "PMU data monitoring tool for giving early warnings for low-frequency oscillations in power systems."
readme = "README.md"
requires-python = ">=3.10"
license = {file="LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "synchrophasor@git+https://github.com/hallvar-h/pypmu@45962bd4daa8e96fef18a5bf26ca32465fc6f870"
]

[project.urls]
Homepage = "https://github.com/MauritsMolberg/OscilloWatch"
Issues = "https://github.com/MauritsMolberg/OscilloWatch/issues"